⚠️ Add Customisable Error Messages

--- a/src/main/resources/config.toml
+++ b/src/main/resources/config.toml
@@ -18,5 +18,19 @@ message=["msg", "tell"]
 reply=["r"]
 socialspy=["ss"]
 
+# Error messages:
+# Customise using MiniMessage
+# Link: https://docs.adventure.kyori.net/minimessage.html#format
+# Placeholders: None
+[error-messages]
+# General
+no-permission="<red>You do not have permission to execute this command.</red>"
+# Message
+message-player-not-found="<red>That player was not found.</red>"
+message-usage="<red>Usage: /message \\<player\\> \\<message\\></red>"
+# Reply
+reply-no-player-found="<red>Unable to reply.</red>"
+reply-usage="<red>Usage: /reply \\<message\\></red>"
+
 [developer-info]
-config-version=0.2
+config-version=0.3
