--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,10 @@
                             <pattern>org.bstats</pattern>
                             <shadedPattern>com.oskarsmc.message.relocated.bstats</shadedPattern>
                         </relocation>
+                        <relocation>
+                            <pattern>net.kyori.adventure.text.minimessage</pattern>
+                            <shadedPattern>com.oskarsmc.message.relocated.minimessage</shadedPattern>
+                        </relocation>
                     </relocations>
                 </configuration>
                 <executions>
@@ -183,6 +187,12 @@
             <artifactId>adventure-text-minimessage</artifactId>
             <version>4.1.0-SNAPSHOT</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.kyori</groupId>
+                    <artifactId>adventure-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.bstats</groupId>
