Fix Formatting and move more plugin info to maven

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>com.oskarsmc</groupId>
     <artifactId>message</artifactId>
+    <url>https://software.oskarsmc.com/</url>
     <version>0.2.2</version>
     <packaging>jar</packaging>
 
