--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           java-version: 1.17
+          distribution: 'adopt'
           cache: gradle
 
       # Validate Wrapper
