--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/setup-java@v2
         with:
           java-version: 1.17
+          distribution: 'adopt'
           cache: gradle
 
       # Validate Wrapper
