--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,35 +6,36 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [ "17" ]
+        os: [ "ubuntu-latest" ]
+
+    runs-on: ${{ matrix.os }}
     steps:
-      # Set up runner
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - name: "checkout"
+        uses: actions/checkout@v3
+
+      - name: "setup java"
+        uses: actions/setup-java@v2
         with:
-          java-version: 17
+          java-version: ${{ matrix.java }}
           distribution: 'adopt'
           cache: gradle
 
-      # Validate Wrapper
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+      - name: "validate gradle wrapper"
+        uses: gradle/wrapper-validation-action@v1
 
-      - name: Build with gradle
-        run: ./gradlew clean build publish # Build
+      - name: gradle build
+        run: ./gradlew clean build publish publishAllPublicationsToHangar
         env:
           MAVEN_USERNAME: ${{ SECRETS.MAVEN_USERNAME }}
           MAVEN_SECRET: ${{ SECRETS.MAVEN_SECRET }}
-
-      # Clean Gradle Cache
-      - name: Cleanup Gradle Cache
-        run: |
-          rm -f ~/.gradle/caches/modules-2/modules-2.lock
-          rm -f ~/.gradle/caches/modules-2/gc.properties
+          HANGAR_API_KEY: ${{ SECRETS.HANGAR_API_KEY }}
 
       # Upload Artifacts
       - uses: actions/upload-artifact@v2
         with:
           name: message
           path: build/libs
-          retention-days: 10
+          retention-days: 60
