--- a/.github/workflows/pr_build.yml
+++ b/.github/workflows/pr_build.yml
@@ -6,30 +6,26 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Set up runner
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      - name: "checkout"
+        uses: actions/checkout@v3
+
+      - name: "setup jdk"
+        uses: actions/setup-java@v3
         with:
           java-version: 17
           distribution: 'adopt'
           cache: gradle
 
-      # Validate Wrapper
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+      - name: "validate gradle wrapper"
+        uses: gradle/wrapper-validation-action@v1
 
-      - name: Build with gradle
-        run: ./gradlew clean build # Build
-
-      # Clean Gradle Cache
-      - name: Cleanup Gradle Cache
-        run: |
-          rm -f ~/.gradle/caches/modules-2/modules-2.lock
-          rm -f ~/.gradle/caches/modules-2/gc.properties
+      - name: "build with gradle"
+        run: ./gradlew clean build
 
       # Upload Artifacts
-      - uses: actions/upload-artifact@v2
+      - name: "upload artifacts"
+        uses: actions/upload-artifact@v2
         with:
-          name: message
+          name: message-pr-${{ github.event.pullrequest.number }}
           path: build/libs
-          retention-days: 10
+          retention-days: 30
