--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,6 @@ gradle-app.setting
 .classpath
 
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all,windows,linux,macos,git
+
+# message - runVelocity
+run/
